fix automatic input zoom-in on mobile devices

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -18,6 +18,7 @@
 }
 
 .form {
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,7 +26,7 @@
   position: relative;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   .form {
     flex-direction: column;
   }
