--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -21,7 +21,7 @@
   animation: rotation 2s linear infinite;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   .spinner {
     width: 100px;
     height: 100px;
@@ -44,7 +44,7 @@
   top: calc(40px + 100px - var(--font-size-small) / 2);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   .text {
     color: transparent;
   }
