--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   
   --font-size-large: 40px;
   --font-size-medium: 20px;
-  --font-size-small: 12px;
+  --font-size-small: 16px;
   
   --padding-large: 40px;
   --padding-medium: 20px;
@@ -26,7 +26,7 @@
   :root {
     --font-size-large: 36px;
     --font-size-medium: 18px;
-    --font-size-small: 12px;
+    --font-size-small: 16px;
     
     --icon-size-medium: 22px;
   }
@@ -36,7 +36,7 @@
   :root {
     --font-size-large: 32px;
     --font-size-medium: 16px;
-    --font-size-small: 12px;
+    --font-size-small: 16px;
     
     --icon-size-medium: 20px;
   }
